[Angelos] Fix deprecation issues #491